--- a/src/app/features/components/dashboard/general-overview/general-overview.component.html
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.html
@@ -101,7 +101,7 @@
                               } @else if (bandwidthLimit()?.error) {
                                 <span class="error-text">Error loading bandwidth info</span>
                               } @else {
-                                <span>{{ bandwidthDisplayValue() }}</span>
+                                <span>{{ bandwidthLimit()?.rate | formatRateValue }}</span>
                               }
                             </span>
                           </mat-panel-description>
@@ -145,7 +145,9 @@
                               aria-live="polite"
                             >
                               <div class="status-indicator" aria-hidden="true"></div>
-                              <span class="status-text">{{ bandwidthDisplayValue() }}</span>
+                              <span class="status-text">{{
+                                bandwidthLimit()?.rate | formatRateValue
+                              }}</span>
                             </div>
 
                             @if (isBandwidthLimited()) {
@@ -154,15 +156,15 @@
                                   detail of [
                                     {
                                       label: 'Upload:',
-                                      value: (bandwidthDetails().upload | formatBytes),
+                                      value: (bandwidthLimit()?.bytesPerSecondTx | formatRateValue),
                                     },
                                     {
                                       label: 'Download:',
-                                      value: (bandwidthDetails().download | formatBytes),
+                                      value: (bandwidthLimit()?.bytesPerSecondRx | formatRateValue),
                                     },
                                     {
                                       label: 'Total:',
-                                      value: (bandwidthDetails().total | formatBytes),
+                                      value: (bandwidthLimit()?.bytesPerSecond | formatRateValue),
                                     },
                                   ];
                                   track trackByIndex($index, detail)
